# sinfar_spectrum_muc

./: CMakeLists.txt  README  cmake_install.cmake  main.cpp  sinfar_muc.cpp  sinfar_muc.h
